Update cache for categories